kubernetes/apps/default/ptero-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptero-ingress
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Endpoints
apiVersion: v1
metadata:
  name: ptero-ingress
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.197
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ptero-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
spec:
  rules:
    - host: ptero.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ptero-ingress
                port:
                  number: 80
  tls:
    - hosts:
        - ptero.${SECRET_DOMAIN}
      secretName: ptero-tls
  ingressClassName: nginx
